--- a/css/style.css
+++ b/css/style.css
@@ -460,12 +460,14 @@ img{
   font-size: 20px;
   color: #fff;
   padding: 0 100px;
+  text-align: center;
 }
 .clock{
   color: #ffd692;
   font-family: GothamBold;
   display: flex;
   align-items: center;
+  justify-content: center;
   padding: 0 100px;
   margin-top: 32px;
 }
@@ -487,8 +489,6 @@ img{
   font-size: 16px;
   font-family: GotHamRegular;
   margin-top: 8px;
-}
-.clock .hours, .clock .minutes, .clock .seconds{
 }
 .miw-item{
   display: flex;
